lab1/Test/L1-A-13-95.output
Error Type B at Line 3
Error Type B at Line 5
Error Type A at Line 9
Error Type B at Line 13
Error Type A at Line 16
Error Type B at Line 32
Error Type A at Line 36
Error Type A at Line 42
Error Type B at Line 49
Error Type A at Line 55
Error Type B at Line 59
