lab1/Test/L1-A-13-95.cmm
struct wTdfOijTLwT {
  int tPNz ;
  struct J B6qd1SkUBww47oZp70 else ;
  int DGRW1Z , Db04 ;
/ }XrG6wb 
;
int ;
float CqksY3i03dio3gPKFh ( struct c Sc5rv0aBRyFCcZHkKS 
  [ \2007140790 ] ) {
  int I8u3 = wdmt7Wi2ydXRwf ;
  if ( PjW8j6IzearLrJx )   if ( I7Yp2S69_AM4l0 )   return 
    iHP8YKb8d 
else   b7KPHLSDXbPk5iljkW7v = dMde5muoA5EdocK && - 
    w7fjPj6ewR4bpVACF6F [ M3LBlBN0VAay_GvTt8aT || qNKd6E1qSD0 
    != nagp3rEvOB - g / TiJVKzRLMJNWjdSsyC ( OkMB8jwUJRXUnH7JxZG8 
    || FK723 < DLnwnZNwEtX8 + ( zgw0 = \j_x && A2fFHj 
    > ! ! ( DLusQ9k7_ || EAnpCWyPjg <= AybPyg - ! ! - 
    JBpw5xYz ( uR67TWlE7hMt8ZYTKR , jv2qmQ1ZV == hCliganjSo29m 
    ) . b8_QSs0jsOma1Ri ) >= 786340732 ) / 1742760850.1586393608 
    ) . oGRaiWPuWwvgag ] / ! P67ZhHupE2EEPa6k ( ) * - 
    IJrbYGDIxTI ;


}
struct {
  struct {
    int cRWopJjbJxR76XfFNA ;
  }S0TNN38FGyDdrF3 ;
};
int x , Zaiu3yB 

2134799230 ;
int UzUn_NvOrW0FhWSTDok ( int eg9h , int YnmllZ_AFmmJ5cPu 
  ) {
}
int JFLtwTSZeSSo ( ) ${
  Qg6D26Jv9 ;
{
    ld9WqTPE ;
    if ( ZvZcXTs )     dQGktOMp6jwoai5x_AuU ;
else     if ( HAK0ehPGzw_G )     while ( dkHSSqmtT 
      ) %    if ( hg6 )     bTpaC4 ;
else     {
      if ( nPfOWEIcn1Ui )       r9AvYue5 ;
else       if ( QfoLLZj8waogBVfD3W )       rxKXTro_Ro0TUn5ZX2sa 
        ;


    }+ 


else     oIkwX64suOUkynWK40kc ;


    while ( `W4xoPo2M4N_LYw0eF4Xy ) {
    }
  }}
int ;
;